@@ -33,7 +33,7 @@
 /*
  * Portions Copyright (c) 2005 Gunnar Ritter, Freiburg i. Br., Germany
  *
- * Sccsid @(#)tdef.h	1.82 (gritter) 6/4/06
+ * Sccsid @(#)tdef.h	1.83 (gritter) 6/13/06
  */
 
 /*
@@ -559,8 +559,10 @@ extern const struct numtab initnumtab[];
 
 #define	ics	env._ics
 #define	sps	env._sps
+#define	minsps	env._minsps
 #define	ses	env._ses
 #define	spacesz	env._spacesz
+#define	minspsz	env._minspsz
 #define	lss	env._lss
 #define	lss1	env._lss1
 #define	ll	env._ll
@@ -598,6 +600,8 @@ extern const struct numtab initnumtab[];
 #define	lastl	env._lastl
 #define	nel	env._nel
 #define	admod	env._admod
+#define	adflg	env._adflg
+#define	adspc	env._adspc
 #define	wordp	env._wordp
 #define	spflg	env._spflg
 #define	linep	env._linep
@@ -639,8 +643,10 @@ extern const struct numtab initnumtab[];
 extern struct env {
 	int	_ics;
 	int	_sps;
+	int	_minsps;
 	int	_ses;
 	int	_spacesz;
+	int	_minspsz;
 	int	_lss;
 	int	_lss1;
 	int	_ll;
@@ -678,6 +684,8 @@ extern struct env {
 	int	_lastl;
 	int	_nel;
 	int	_admod;
+	int	_adflg;
+	int	_adspc;
 	tchar	*_wordp;
 	int	_spflg;
 	tchar	*_linep;
